--- a/Phones/packages.config
+++ b/Phones/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="jQuery" version="3.3.1" targetFramework="net452" />
+  <package id="jQuery.Validation" version="1.17.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.5.1" targetFramework="net452" />
@@ -29,6 +30,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.4" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net452" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.5" targetFramework="net452" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.9" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
